updates to the program, a basic implementation of the canvas for the birds-eye view map

--- a/gui/RoombaUI/src/app/view/MainPage.fxml
+++ b/gui/RoombaUI/src/app/view/MainPage.fxml
@@ -18,7 +18,7 @@
             </Group>
          </top>
          <center>
-            <Canvas height="200.0" width="200.0" BorderPane.alignment="CENTER" />
+            <Canvas fx:id="area_map" height="500.0" width="900.0" BorderPane.alignment="CENTER" />
          </center>
          <bottom>
             <TextField fx:id="cmdLineBox" onAction="#onEnter" BorderPane.alignment="CENTER" />
